syntax = "proto3";

package storage;

option go_package = "github.com/Naumovets/tages;tages";

service Storage {
    rpc Upload(stream UploadRequest) returns (UploadResponse);
    rpc Download(DownloadRequest) returns (stream DownloadResponse);
    rpc GetList(ListFilesRequest) returns (ListFilesResponse);
}

message UploadRequest {
    string file_name = 1;
    bytes chunk = 2;
}

message UploadResponse {
    string id = 1;
}

message DownloadRequest {
    string id = 1;
}

message DownloadResponse {
    string file_name = 1;
    bytes chunk = 2;
}

message ListFilesRequest {
    uint64 limit = 1;
    uint64 offset = 2;
}

message File {
    string id = 1;
    string file_name = 2;
    string created_at = 3;
    string updated_at = 4;
}

message ListFilesResponse {
    repeated File files = 1;
}